--- a/lib/cluster_chef/knife/bootstrap/ubuntu10.04-basic.erb
+++ b/lib/cluster_chef/knife/bootstrap/ubuntu10.04-basic.erb
@@ -1,23 +1,22 @@
 bash -c '
 
-# This is the ubuntu-10.04-gems script from opscode, but it installs the chef-client service and kicks off the first run of chef
+# This is the ubuntu-10.04-apt script from opscode, but it installs the chef-client service and kicks off the first run of chef
 
 set -v
 
+apt-get update
+
 if [ ! -f /usr/bin/chef-client ]; then
-  apt-get update
-  apt-get install -y ruby ruby1.8-dev build-essential wget libruby-extras libruby1.8-extras
-  cd /tmp
-  wget http://production.cf.rubygems.org/rubygems/rubygems-1.3.7.tgz
-  tar zxf rubygems-1.3.7.tgz
-  cd rubygems-1.3.7
-  ruby setup.rb --no-format-executable
+echo FOOBARBAZ
+  echo "chef	chef/chef_server_url	string	<%= @chef_config[:chef_server_url] %>" | debconf-set-selections
+  [ -f /etc/apt/sources.list.d/opscode.list ] || echo "deb http://apt.opscode.com <%= chef_version.to_f == 0.10 ? "lucid-0.10" : "lucid" %> main" > /etc/apt/sources.list.d/opscode.list
+  wget <%= "--proxy=on " if knife_config[:bootstrap_proxy] %>-O- http://apt.opscode.com/packages@opscode.com.gpg.key | apt-key add -
+  apt-get install -y chef
 fi
 
-gem install ohai --no-rdoc --no-ri --verbose
-gem install chef --no-rdoc --no-ri --verbose <%= bootstrap_version_string %>
-
-mkdir -p /etc/chef
+if [ ! -f /usr/bin/sv ] ; then
+     apt-get install runit
+fi
 
 (
 cat <<'EOP'
@@ -39,32 +38,6 @@ cat <<'EOP'
 EOP
 ) > /etc/chef/first-boot.json
 
-echo -e "`date` \n\n**** \n**** Adding chef client runit scripts:\n****\n"
-service chef-client stop 2>/dev/null ; sleep 1 ; killall chef-client 2>/dev/null
-mkdir -p /var/log/chef /var/chef /etc/sv/chef-client/log/main
-cat > /etc/sv/chef-client/log/run <<EOF
-#!/bin/bash
-exec svlogd -tt ./main
-EOF
-cat > /etc/sv/chef-client/run <<EOF
-#!/bin/bash
-exec 2>&1
-exec /usr/bin/env chef-client -i 43200 -s 20 -L /var/log/chef/client.log
-EOF
-chmod +x  /etc/sv/chef-client/log/run /etc/sv/chef-client/run
-ln -nfs /usr/bin/sv /etc/init.d/chef-client
+# There is no /etc/service by default unless runit is installed
 
-<%- if (@config[:bootstrap_runs_chef_client].to_s == 'true') || (@chef_config.knife[:bootstrap_runs_chef_client].to_s == 'true') %>
-echo -e "`date` \n\n**** \n**** First run of chef:\n****\n"
-<%= start_chef %>
-<%- end %>
-
-echo -e "`date` \n\n**** \n**** Cleanup:\n****\n"
-updatedb
-
-echo -e "`date` \n\n**** \n**** Enabling chef client service:\n****\n"
-ln -nfs /etc/sv/chef-client /etc/service/chef-client
-service chef-client start
-
-echo -e "`date` \n\n**** \n**** Cluster Chef client bootstrap complete\n****\n"
-'
+<%= start_chef %>'
