--- a/site-cookbooks/motd/templates/default/motd.erb
+++ b/site-cookbooks/motd/templates/default/motd.erb
@@ -3,4 +3,4 @@ Provide	<%= @provides_service.sort.join(",") %>
 Roles	<%= @roles.sort.join(' ') %>
 IP	<%= [@private_ips, @public_ips, @public_hostname].flatten.join("\t") %>
 <%- if node[:ec2] -%>EC2	<%= [ @instance_id, @instance_type, @security_groups.sort.join(' ') ].join("\t") %><%- end -%>
-CHIMP CHIMP CHIMP <%= @silliness %>
+<%= @silliness %>
