Add data_bag_keyfile option to set up an encrypted databag keyfile in /etc/chef so that encrypted databags can be used more easily.

--- a/lib/cluster_chef/knife/bootstrap/ubuntu10.04-basic.erb
+++ b/lib/cluster_chef/knife/bootstrap/ubuntu10.04-basic.erb
@@ -38,6 +38,7 @@ EOP
 ) > /tmp/encrypted_data_bag_secret
 awk NF /tmp/encrypted_data_bag_secret > /etc/chef/encrypted_data_bag_secret 
 rm /tmp/encrypted_data_bag_secret
+chmod 600 /etc/chef/encrypted_data_bag_secret 
 
 
 echo -e "`date` \n\n**** \n**** Creating chef client script:\n****\n"
