--- a/lib/chef/knife/bootstrap/ubuntu10.04-basic.erb
+++ b/lib/chef/knife/bootstrap/ubuntu10.04-basic.erb
@@ -1,26 +1,20 @@
 bash -c '
 
-# This is the ubuntu-10.04-gems script from opscode, but it installs the chef-client service and kicks off the first run of chef
+# This is the ubuntu-10.04-apt script from opscode, but it installs the chef-client service and kicks off the first run of chef
 
 set -v
 
-<%= "export http_proxy=\"#{knife_config[:bootstrap_proxy]}\"" if knife_config[:bootstrap_proxy] -%>
-eval `cat /etc/lsb-release `
-export DEBIAN_FRONTEND=noninteractive
-
 if [ ! -f /usr/bin/chef-client ]; then
+  echo "chef	chef/chef_server_url	string	<%= @chef_config[:chef_server_url] %>" | debconf-set-selections
+  [ -f /etc/apt/sources.list.d/opscode.list ] || echo "deb http://apt.opscode.com <%= chef_version.to_f == 0.10 ? "lucid-0.10" : "lucid" %> main" > /etc/apt/sources.list.d/opscode.list
+  wget <%= "--proxy=on " if knife_config[:bootstrap_proxy] %>-O- http://apt.opscode.com/packages@opscode.com.gpg.key | apt-key add -
   apt-get update
-  apt-get install -y ruby ruby1.8-dev build-essential wget libruby-extras libruby1.8-extras
-  cd /tmp
-  wget <%= "--proxy=on " if knife_config[:bootstrap_proxy] %>http://production.cf.rubygems.org/rubygems/rubygems-1.6.2.tgz
-  tar zxf rubygems-1.6.2.tgz
-  cd rubygems-1.6.2
-  ruby setup.rb --no-format-executable
+  apt-get install -y chef
 fi
 
-gem update --no-rdoc --no-ri
-gem install ohai --no-rdoc --no-ri --verbose
-gem install chef --no-rdoc --no-ri --verbose <%= bootstrap_version_string %>
+if [ ! -f /usr/bin/sv ] ; then
+     apt-get install -y runit fgetty
+fi
 
 echo -e "`date` \n\n**** \n**** Knifing in the chef client config files:\n****\n"
 mkdir -p /etc/chef
@@ -32,6 +26,19 @@ EOP
 ) > /tmp/validation.pem
 awk NF /tmp/validation.pem > /etc/chef/validation.pem
 rm /tmp/validation.pem
+
+# The below relies on the config parameter "data_bag_keyfile" existing in the 
+# knife config.  This allows secrets to be stored on a less trusted server.
+echo -e "`date` \n\n**** \n**** Knifing in the chef data bag secret file:\n****\n"
+(
+cat <<'EOP'
+<%= data_bag_keyfile %>
+EOP
+) > /tmp/encrypted_data_bag_secret
+awk NF /tmp/encrypted_data_bag_secret > /etc/chef/encrypted_data_bag_secret 
+rm /tmp/encrypted_data_bag_secret
+chmod 600 /etc/chef/encrypted_data_bag_secret 
+
 
 echo -e "`date` \n\n**** \n**** Creating chef client script:\n****\n"
 
@@ -68,7 +75,6 @@ echo -e "`date` \n\n**** \n**** First run of chef:\n****\n"
 <%- end %>
 
 echo -e "`date` \n\n**** \n**** Cleanup:\n****\n"
-updatedb
 
 echo -e "`date` \n\n**** \n**** Enabling chef client service:\n****\n"
 ln -nfs /etc/sv/chef-client /etc/service/chef-client
