Fix various gemspec issues. Brought forward the old bootstrap for ubuntu since it brings in the data bag key file, and fixed chef_layer.rb so it doesn't cause a crash

--- a/lib/chef/knife/bootstrap/ubuntu10.04-basic.erb
+++ b/lib/chef/knife/bootstrap/ubuntu10.04-basic.erb
@@ -19,24 +19,38 @@ fi
 echo -e "`date` \n\n**** \n**** Knifing in the chef client config files:\n****\n"
 mkdir -p /etc/chef
 
+mkdir -p /tmp/knife-bootstrap
+chmod 700 /tmp/knife-bootstrap 
+cd /tmp/knife-bootstrap
+
+<%- if @config[:client_key] %>
+(
+cat <<'EOP'
+<%= @config[:client_key] %>
+EOP
+) > /tmp/knife-bootstrap/client.pem
+awk NF /tmp/knife-bootstrap/client.pem > /etc/chef/client.pem
+<%- else %>
 (
 cat <<'EOP'
 <%= validation_key %>
 EOP
-) > /tmp/validation.pem
-awk NF /tmp/validation.pem > /etc/chef/validation.pem
-rm /tmp/validation.pem
+) > /tmp/knife-bootstrap/validation.pem
+awk NF /tmp/knife-bootstrap/validation.pem > /etc/chef/validation.pem
+<%- end %>
 
-# The below relies on the config parameter "data_bag_keyfile" existing in the 
+
+# See https://github.com/schisamo/chef/commit/d0789ffd97a5cd221d147874c492111d51be9cc1
+# The below relies on the config parameter "encrpyted_data_bag_secret" existing in the 
 # knife config.  This allows secrets to be stored on a less trusted server.
 echo -e "`date` \n\n**** \n**** Knifing in the chef data bag secret file:\n****\n"
 (
 cat <<'EOP'
-<%= data_bag_keyfile %>
+<%= encrypted_data_bag_secret %>
 EOP
-) > /tmp/encrypted_data_bag_secret
-awk NF /tmp/encrypted_data_bag_secret > /etc/chef/encrypted_data_bag_secret 
-rm /tmp/encrypted_data_bag_secret
+) > /tmp/knife-bootstrap/encrypted_data_bag_secret
+awk NF /tmp/knife-bootstrap/encrypted_data_bag_secret > /etc/chef/encrypted_data_bag_secret 
+# rm /tmp/encrypted_data_bag_secret
 chmod 600 /etc/chef/encrypted_data_bag_secret 
 
 
