--- a/site-cookbooks/firewall/templates/default/no_port_scan.erb
+++ b/site-cookbooks/firewall/templates/default/no_port_scan.erb
@@ -1,9 +1,16 @@
+# Maintained by chef.  Local changes will be overwritten.
+# I am tired of this.  Port scan defense can be restored later, but
+# for now, I need to permit legit connections.
+#
+# Protection will come from ec2 filtering and the default DENY, not via the currently broken portscan
+# counting below.
+#
 # Don't allow port scan for <%= @name %> port <%= @port %> (added by firewall::port_scan recipe)
 
-# Setup our hitcount rule
--A FWR -p TCP --dport <%= @port %> -m state --state NEW -m recent --set --name <%= @name.upcase %>
--A FWR -p TCP --dport <%= @port %> -m state --state NEW -m recent --update --seconds <%= @window %> --hitcount <%= @max_conns %> --rttl --name <%= @name.upcase %> -j DROP
-
-# By default, we need to allow this traffic
+# # Setup our hitcount rule
+# -A FWR -p TCP --dport <%= @port %> -m state --state NEW -m recent --set --name <%= @name.upcase %>
+# -A FWR -p TCP --dport <%= @port %> -m state --state NEW -m recent --update --seconds <%= @window %> --hitcount <%= @max_conns %> --rttl --name <%= @name.upcase %> -j DROP
+# 
+# # By default, we need to allow this traffic
 -A FWR -p TCP --dport <%= @port %> -j ACCEPT
-
+# 
