--- a/lib/chef/knife/bootstrap/ubuntu10.04-cluster_chef.erb
+++ b/lib/chef/knife/bootstrap/ubuntu10.04-cluster_chef.erb
@@ -6,6 +6,8 @@ bash -c '
 # * pushes the node identity into the first-boot.json
 # * installs the chef-client service and kicks off the first run of chef
 
+echo "Template: ubuntu10.04-cluster_chef.erb"
+
 <%= (@config[:verbosity].to_i > 1 ? 'set -v' : '') %>
 
 mkdir -p /tmp/knife-bootstrap ; chmod 700 /tmp/knife-bootstrap 
@@ -108,6 +110,55 @@ echo -e "`date` \n\n**** \n**** Creating chef client script:\n****\n"
 cat <<'EOP'
 <%= config_content %>
 <%= @config[:node].chef_client_script_content %>
+
+# Need to monkeypatch the logging initialization in Chef::Application                                         
+class Chef::Application
+  def configure_logging
+    l1 = Chef::Log.init("/var/log/chef/chef-info.log")
+    l1.level=(Mixlib::Log::LEVELS[:info])
+    l2 = Chef::Log.init(STDOUT)
+    l2.level=(Mixlib::Log::LEVELS[:warn])
+    STDOUT.sync = true
+    l2.formatter = Chef::Log.logger.formatter
+    Chef::Log::use_log_devices([l1, l2])
+  end
+end
+Chef::Log.warn("Logging INFO and higher to /var/log/chef/chef-info.log")
+
+# The below is to reduce/eliminate extraneous logging from the execute resource. 
+# It may not be enough by itself, since the use of opts[:live_stream] is duplicated 
+# in a couple of places. 
+# This is specifically to make the apt LWRP quiet.
+# The difference here is that opts[:live_stream] is always set to nil 
+class Chef::Provider::Execute
+  def action_run
+    opts = {}
+
+    if sentinel_file = @new_resource.creates
+      if ::File.exists?(sentinel_file)
+        Chef::Log.debug("#{@new_resource} sentinel file #{sentinel_file} exists - nothing to do")
+        return false
+      end
+    end
+
+    # original implementation did not specify a timeout, but ShellOut                                                    
+    # *always* times out. So, set a very long default timeout                                                            
+    opts[:timeout] = @new_resource.timeout || 3600
+    opts[:returns] = @new_resource.returns if @new_resource.returns
+    opts[:environment] = @new_resource.environment if @new_resource.environment
+    opts[:user] = @new_resource.user if @new_resource.user
+    opts[:group] = @new_resource.group if @new_resource.group
+    opts[:cwd] = @new_resource.cwd if @new_resource.cwd
+    opts[:umask] = @new_resource.umask if @new_resource.umask
+    opts[:live_stream] = nil
+
+    result = shell_out!(@new_resource.command, opts)
+    @new_resource.updated_by_last_action(true)
+    Chef::Log.info("#{@new_resource} ran successfully")
+  end
+end
+Chef::Log.warn("All executing messages (including apt) begin suppressed by /etc/chef/client.rb")
+
 EOP
 ) > /etc/chef/client.rb
 
