--- a/lib/chef/knife/bootstrap/ubuntu11.04-cluster_chef_knewton.erb
+++ b/lib/chef/knife/bootstrap/ubuntu11.04-cluster_chef_knewton.erb
@@ -7,6 +7,17 @@ bash -c '
 # * pushes the node identity into the first-boot.json
 # * installs the chef-client service and kicks off the first run of chef
 
+function throttle_verbosity {
+  # This function will send output to /dev/null if
+  # knife[:bootstrap_less_verbose] is true
+  <%- if @chef_config.knife[:bootstrap_less_verbose] == true %>
+  cat > /dev/null
+  <%- else %>
+  cat
+  <% end %>
+}
+
+echo "Using template: ubuntu11.04-cluster_chef_knewton.erb"
 set -e
 eval $(cat /etc/lsb-release)
 export DEBIAN_FRONTEND=noninteractive
@@ -45,14 +56,14 @@ APT_UPDATED=no
 if [ ! -e /usr/bin/ruby ] ; then
     if [ "$APT_UPDATED" != "yes" ] ; then
         echo -e "`date` \n\n**** \n**** apt update:\n****\n"
-        apt-get -y update && APT_UPDATED=yes
+        (apt-get -y update && APT_UPDATED=yes ) 2>&1 | throttle_verbosity
     fi      
         
 
     echo -e "`date` \n\n**** \n**** Installing base ruby packages for version $VER\n****\n"
 
-    echo apt-get -y install build-essential wget ruby${VER} ruby${VER}-dev ri${VER} runit zlib1g-dev libssl-dev openssl libcurl4-openssl-dev libreadline6-dev libyaml-dev
-    apt-get -y install build-essential wget ruby${VER} ruby${VER}-dev ri${VER} runit zlib1g-dev libssl-dev openssl libcurl4-openssl-dev libreadline6-dev libyaml-dev
+    echo apt-get -y install build-essential wget ruby${VER} ruby${VER}-dev ri${VER} runit zlib1g-dev libssl-dev openssl libcurl4-openssl-dev libreadline6-dev libyaml-dev 2>&1 | throttle_verbosity
+    apt-get -y install build-essential wget ruby${VER} ruby${VER}-dev ri${VER} runit zlib1g-dev libssl-dev openssl libcurl4-openssl-dev libreadline6-dev libyaml-dev 2>&1 | throttle_verbosity
 
     update-alternatives --install /usr/bin/ruby ruby /usr/bin/ruby${VER} 400 --slave /usr/share/man/man1/ruby.1.gz ruby.gz /usr/share/man/man1/ruby${MANVER}.gz --slave /usr/bin/ri ri /usr/bin/ri${VER} --slave /usr/bin/irb irb /usr/bin/irb${VER}
     update-alternatives --install /usr/bin/gem gem /usr/bin/gem${VER} 400
@@ -60,11 +71,10 @@ else
     echo -e "`date` \n\n**** \n****ruby exists, not installing\n****\n"
 fi
 
-
 if [ "0" == $(/usr/bin/ruby -e "puts(%x{gem --version} < \"1.6.2\" ? 0 : -1 )") ] ; then
   echo -e "`date` \n\n**** \n**** Updating rubygems:\n****\n"
   # screw you Debian
-  /usr/bin/env REALLY_GEM_UPDATE_SYSTEM=1 gem update --system
+  /usr/bin/env REALLY_GEM_UPDATE_SYSTEM=1 gem update --system 2>&1 | throttle_verbosity
   # screw you rubygems
   # On natty+oneiric it looks like this goes into /usr/local/lib/site_ruby/1.9.1/rubygems
   for foo in /usr/local/lib/site_ruby/*/rubygems/deprecate.rb ; do 
@@ -78,13 +88,13 @@ fi
 if [ ! -f /usr/bin/chef-client ] ; then
     if [ "$APT_UPDATED" != "yes" ] ; then
         echo -e "`date` \n\n**** \n**** apt update:\n****\n"
-        apt-get -y update  && APT_UPDATED=yes
+        (apt-get -y update  && APT_UPDATED=yes ) 2>&1 | throttle_verbosity
     fi
 
     echo -e "`date` \n\n**** \n**** Installing chef:\n****\n"
-    gem install ohai --no-rdoc --no-ri
-    gem install chef --no-rdoc --no-ri <%= bootstrap_version_string %>
-    gem install      --no-rdoc --no-ri bundler pry cheat
+    gem install ohai --no-rdoc --no-ri                                 2>&1 | throttle_verbosity
+    gem install chef --no-rdoc --no-ri <%= bootstrap_version_string %> 2>&1 | throttle_verbosity
+    gem install      --no-rdoc --no-ri bundler pry cheat               2>&1 | throttle_verbosity   
     
 else # no chef-client
     echo -e "`date` \n\n**** \n**** Chef is present -- skipping chef installation\n****\n"
@@ -132,8 +142,56 @@ echo -e "`date` \n\n**** \n**** Creating chef client script:\n****\n"
 cat <<EOP
 <%= config_content %>
 <%= @config[:node].chef_client_script_content %>
+# Need to monkeypatch the logging initialization in Chef::Application                                         
+class Chef::Application
+  def configure_logging
+    l1 = Chef::Log.init("/var/log/chef/chef-info.log")
+    l1.level=(Mixlib::Log::LEVELS[:info])
+    l2 = Chef::Log.init(STDOUT)
+    l2.level=(Mixlib::Log::LEVELS[:warn])
+    STDOUT.sync = true
+    l2.formatter = Chef::Log.logger.formatter
+    Chef::Log::use_log_devices([l1, l2])
+  end
+end
+Chef::Log.warn("Logging INFO and higher to /var/log/chef/chef-info.log")
+
+# The below is to reduce/eliminate extraneous logging from the execute resource. 
+# It may not be enough by itself, since the use of opts[:live_stream] is duplicated 
+# in a couple of places. 
+# This is specifically to make the apt LWRP quiet.
+# The difference here is that opts[:live_stream] is always set to nil 
+class Chef::Provider::Execute
+  def action_run
+    opts = {}
+
+    if sentinel_file = @new_resource.creates
+      if ::File.exists?(sentinel_file)
+        Chef::Log.debug("#{@new_resource} sentinel file #{sentinel_file} exists - nothing to do")
+        return false
+      end
+    end
+
+    # original implementation did not specify a timeout, but ShellOut                                                    
+    # *always* times out. So, set a very long default timeout                                                            
+    opts[:timeout] = @new_resource.timeout || 3600
+    opts[:returns] = @new_resource.returns if @new_resource.returns
+    opts[:environment] = @new_resource.environment if @new_resource.environment
+    opts[:user] = @new_resource.user if @new_resource.user
+    opts[:group] = @new_resource.group if @new_resource.group
+    opts[:cwd] = @new_resource.cwd if @new_resource.cwd
+    opts[:umask] = @new_resource.umask if @new_resource.umask
+    opts[:live_stream] = nil
+
+    result = shell_out!(@new_resource.command, opts)
+    @new_resource.updated_by_last_action(true)
+    Chef::Log.info("#{@new_resource} ran successfully")
+  end
+end
+Chef::Log.warn("All executing messages (including apt) begin suppressed by /etc/chef/client.rb")
 EOP
 ) > /etc/chef/client.rb
+
 
 (
 cat <<EOP
